dataset1235/2025-2/1379599236/users/2549797095/executions/2627828506_2086141900.log
== SUBMISSION (2025-09-01 18:28:30)
-- CODE: 
from math import *
lado= float(input())
apotema = lado/2* math.tan(math.pi/11)

# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/2* math.tan(math.pi/11)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/2* math.tan(math.pi/11)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/2* math.tan(math.pi/11)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/2* math.tan(math.pi/11)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/2* math.tan(math.pi/11)
                      ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado/2* math.tan(math.pi/11)
                      ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 18:50:14)
-- CODE: 
import math
lado = float(input())
apotema = lado/(2*math.tan(math.pi/11))
area = round((11*lado*apotema)/2, 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
